# chibicc

./: .gitignore  CMakeLists.txt  chibicc.h  codegen.c  codegen.h  parse.c  type.c
dcpu16/: codegen.c  config.h
x86_64/: codegen.c  config.h
